# hr_agent_swarm

./: API.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FINAL_CHECKLIST.md  GETTING_STARTED.md  GET_KEYS.md  INFRASTRUCTURE_SUMMARY.md  INTERACTION_AUDIT.md  LICENSE  MIGRATION_GUIDE.md  Makefile  QUICKSTART.md  README.md  SCRIPTS.md  SECURITY.md  SETUP.md  SETUP_PRODUCTION.md  STATUS.md  TECHNICAL_DEBT.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_issue.md
.github/workflows/: ci.yml
.husky/: pre-commit
bamboohr-mcp/: pyproject.toml
docs/: README.md  SECURITY_AUDIT.md  UI_AUDIT.md
docs/api/: openapi.yaml
docs/refactor/: 01-discovery.md  02-priorities.md  03-architecture.md  99-summary.md
e2e/: dashboard.spec.ts  employees.spec.ts  export.spec.ts  leave.spec.ts  onboarding.spec.ts  policy-search.spec.ts
reviews/: 09-END-STATE-GAP-ANALYSIS.md  10-EXECUTION-ROADMAP.md
scripts/: backup.ts  deploy.ts  health-check.ts  seed-local.ts  seed.ts  setup-admin.ts  setup.ts  start-dev.ts  verify-supabase.ts
src/: middleware.ts  proxy.ts
src/__tests__/: setup.ts
src/app/: globals.css  layout.tsx
src/hooks/: use-keyboard-shortcut.ts
src/lib/: date-only.test.ts  date-only.ts  milestones.test.ts  milestones.ts  utils.test.ts
src/types/: agent.test.ts  agent.ts  (+6 more)
supabase/: config.toml  seed.sql
(+342 files in other folders)
